--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "roblox-gemini-proxy",
+  "name": "gemini-proxy",
   "version": "1.0.0",
+  "main": "api/chat.js",
   "type": "module",
-  "dependencies": {
-    "node-fetch": "^3.3.2"
-  }
+  "scripts": {
+    "start": "vercel dev"
+  },
+  "dependencies": {}
 }
